# ArtiMuse

./: .gitignore  README.md  demo_api.py  demo_gradio.py  pyproject.toml  requirements_gradio.txt
src/: __init__.py  demo_api.py  demo_gradio.py
src/artimuse/: __init__.py
src/artimuse/demo_utils/: model_server.py
src/artimuse/internvl/model/: __init__.py
src/artimuse/internvl/model/internlm2/: __init__.py
src/artimuse/internvl/model/internvl_chat/: __init__.py  configuration_internvl_chat.py  modeling_artimuse.py
src/artimuse/internvl/model/phi3/: __init__.py
src/demo_utils/: __init__.py  model_server.py
src/eval/: __init__.py  eval_dataset.py  eval_image.py
